--- a/style.css
+++ b/style.css
@@ -36,3 +36,12 @@ header h1{
     display: block;
     margin: auto;
 }
+box{
+    border-radius: 20px;
+    color: ;
+    padding: 12px;
+    background-color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    border-color: white;
+    justify-content: center;
+}
