--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ header h1{
 }
 box{
     border-radius: 20px;
-    color: ;
+    color:black ;
     padding: 12px;
     background-color: white;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
