--- a/style.css
+++ b/style.css
@@ -47,8 +47,8 @@ box{
 }
 main{
     display: grid;
-    grid-template-columns: 50% 30% 20%;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 50% 50%;
+    
 }
 main>div{
     border: 2px solid red;
